@@ -1,3 +1,5 @@
+- Refactor: Add new method to check if enrolment in special season exists
+
 32.13.0 (07-06-2022)
 - Bug Fix: Corrected english translation for group credits
 - Refactor: Remove legacy curricular management functionalities
